<resources>
    <string name="app_name">食神來了</string>
    <string name="signInactivity">SignInActivity</string>

    <!--主畫面-->
    <string name="stringLoginM">登入</string>
    <string name="stringNews">最新消息</string>
    <string name="stringLives">直播專區</string>
    <string name="stringForum">主廚時程表</string>
    <string name="stringMall">商城</string>
    <string name="stringMember">會員專區</string>
    <string name="stringOrder">訂單管理</string>
    <string name="stringCustomerService">線上客服</string>
    <!--登入會員-->
    <string name="stringLoginNo">請先登入</string>
    <string name="stringLogin">登入會員</string>
    <string name="stringKeyId">輸入帳號</string>
    <string name="stringKeyPassword">輸入密碼</string>
    <string name="error_invalid_email">此電子郵件地址無效</string>
    <string name="error_invalid_password">密碼的長度太短</string>
    <string name="error_field_required">這是必填的欄位</string>
    <string name="error_incorrect_password">此密碼無法識別</string>
    <!--登出-->
    <string name="stringLogout">真的要登出?</string>
    <string name="stringLogoutYes">登出</string>
    <string name="stringLogoutNo">取消</string>
    <!--側欄-->
    <string name="open_drawer">打開側欄</string>
    <string name="close_drawer">關閉側欄</string>
    <!--直播專區Menu-->
    <string name="stringStartLive">開始直播</string>
    <string name="stringStopLive">停止直播</string>
    <!--推播通知專區-->
    <string name="stringMainBroast">開啟推播通知</string>
    <!--訂單專區-->
    <string name="stringCameraQRCode">開啟相機功能</string>
    <string name="stringOrderQRCode">顯示訂單QRCode</string>
    <!--套餐訂單專區-->
    <string name="stringMenuOrderDetail">嚴選套餐訂單</string>
    <string name="stringMenuOrderButton">訂單詳細資料</string>
    <!--主廚食材訂單-->
    <string name="stringChefOrder">選擇訂單所需食材</string>
    <string name="stringFoodMallOrder">確認訂單食材</string>
    <!--主廚食材訂單明細-->
    <string name="stringChefOrderDetail">食材訂單明細表</string>
    <!--訂單審核選單-->
    <string-array name="stringArrayStatus">
        <item name="stringArrayStatusReady">請審核</item>
        <item name="stringArrayStatusOK">審核通過</item>
        <item name="stringArrayStatusNO">審核不通過</item>
    </string-array>


    <!--<string name="default_web_client_id">331119958448-85cf9gof3ss6mmsmh5a2q70586q1ivo1.apps.googleusercontent.com</string>-->
    <string name="server_client_id">331119958448-85cf9gof3ss6mmsmh5a2q70586q1ivo1.apps.googleusercontent.com</string>


    <!--nbar&ndash;&gt;下方navigationbar-->
    <string name="title_home">主畫面</string>
    <string name="title_dashboard">功能選單</string>
    <string name="title_notifications">推播通知</string>


    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">NAME</string>


    <string-array name="stringFoodMallArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="stringTravelMode">
        <item>汽車</item>
        <item>大眾運輸</item>
        <item>步行</item>
    </string-array>


    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
</resources>
